# xp_swiss_vfr

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Makefile  README.md  RELEASE.md
.claude/tasks/: phase-0-setup.md  phase-1-data-model.md  phase-2-procedure-engine.md  phase-4-procedure-selection-ui.md
.github/workflows/: build.yml
build-sanitize/: Makefile  cmake_install.cmake
build-sanitize/tests/: Makefile  cmake_install.cmake
docs/: LSZG_RWY06_test.fms  milestone-1.5-findings.md  milestone-1.5-plan.md  phase-2-progress.md
resources/airports/: LSPN_triengen.json  LSPV_wangen_lachen.json  LSZB_bern_belp.json  LSZF_birrfeld.json  LSZG_grenchen.json  LSZI_fricktal_schupfart.json  LSZK_speck_fehraltorf.json  LSZO_luzern_beromuenster.json
resources/schemas/: vfr_airport.schema.json
src/: main.cpp  version.hpp
src/core/: plugin.cpp  plugin.hpp
src/data/: coordinate.hpp  json_loader.cpp  json_loader.hpp  navigraph_source.cpp  navigraph_source.hpp  nearby_airports.cpp  nearby_airports.hpp  parse_error.hpp  runway.hpp  validation.cpp  validation.hpp  vfr_airport.hpp  vfr_airport_database.cpp  vfr_airport_database.hpp  waypoint.hpp
src/geometry/: coordinate_math.cpp  coordinate_math.hpp  terrain.cpp  terrain.hpp  terrain_xplm.cpp
src/persistence/: settings.cpp  settings.hpp
src/procedures/: build_procedure.cpp  build_procedure.hpp  procedure.hpp  procedure_runner.cpp  procedure_runner.hpp  procedure_state.cpp  procedure_state.hpp
src/ui/: procedure_selection_window.cpp  procedure_selection_window.hpp
tests/: CMakeLists.txt  test_build_procedure.cpp  test_database.cpp  test_geometry.cpp  test_json_loader.cpp  test_navigraph_source.cpp  test_nearby_airports.cpp  test_procedure_state.cpp  test_terrain.cpp  test_validation.cpp
tests/fixtures/: malformed.json
tests/fixtures/airports/: bad_lat.json  duplicate_vrp_name.json  empty_runways.json  lszg_valid.json  missing_icao.json
